--- a/buy.html
+++ b/buy.html
@@ -21,24 +21,24 @@
 <br/>
 <br/>
 <a name="BUY"></a>
-<div class="header" id="_header_buy">DIRECTLY BUY XUTENG TOKENS FROM SYSTEM FUND</div>
+<div class="header" id="_header_buy">BUY XUTENG</div>
 <hr class="cp"/>
 <div>
 <table class="cover">
-<tr><td class="buttoner"><span class="trlab" id="_label_Sysbuy0Xut">YOUR XUT BALANCE</span></td><td><span class="class_xuteng"></span></td></tr>
-<tr><td class="buttoner"><span class="trlab" id="_label_Sysbuy1Eth">YOUR ETH BALANCE</span></td><td><span class="class_ethers"></span></td></tr>
-<tr><td class="buttoner"><span class="trlab" id="_label_Sysbuy2Tpe">EXCHANGE RATE</span></td><td><span class="class_sellAtTpe"></span>&nbsp;ETH/XUT</td></tr>
-<tr><td class="buttoner"><span class="trlab" id="_label_Sysbuy3Max">XUT MAX BUY</span></td><td><span class="class_xutengOfXut"></span>&nbsp;XUT</td></tr>
-<tr><td class="buttoner"><span class="trlab" id="_label_Sysbuy4Get">XUT TO BUY</span></td><td><input type="text" class="money" data-change="XutGet" value="" id="xut2get"/>&nbsp;XUT</td></tr>
-<tr><td class="buttoner"><span class="trlab" id="_label_Sysbuy5Pay">ETH TO PAY</span></td><td><input disabled type="text" class="money" value="" id="eth2xut"/>&nbsp;ETH</td></tr>
-<tr><td class="buttoner"><a class="button" data-action="EthXut" id="_button_EthXut">BUY NOW</a></td><td><span class="textnotice" id="_note_EthXut"></span></td></tr>
+<tr><td class="buttoner"><span class="trlab" id="_label_Sysbuy0Xut">?</span></td><td><span class="class_xuteng"></span></td></tr>
+<tr><td class="buttoner"><span class="trlab" id="_label_Sysbuy1Eth">?</span></td><td><span class="class_ethers"></span></td></tr>
+<tr><td class="buttoner"><span class="trlab" id="_label_Sysbuy2Tpe">?</span></td><td><span class="class_sellAtTpe"></span>&nbsp;<span class="coin">COIN</span>/XUT</td></tr>
+<tr><td class="buttoner"><span class="trlab" id="_label_Sysbuy3Max">?</span></td><td><span class="class_xutengOfXut"></span>&nbsp;XUT</td></tr>
+<tr><td class="buttoner"><span class="trlab" id="_label_Sysbuy4Get">?</span></td><td><input type="text" class="money" data-change="XutGet" value="" id="xut2get"/>&nbsp;XUT</td></tr>
+<tr><td class="buttoner"><span class="trlab" id="_label_Sysbuy5Pay">?</span></td><td><input disabled type="text" class="money" value="" id="eth2xut"/>&nbsp;<span class="coin">COIN</span></td></tr>
+<tr><td class="buttoner"><a class="button" data-action="EthXut" id="_button_EthXut">?</a></td><td><span class="textnotice" id="_note_EthXut"></span></td></tr>
 </table>
 <div class="result" id="mm_buy"></div>
 <div class="result" id="_help_buy"></div>
 </div>
 <hr class="cp"/>
 <br/>
-<div class="footer" id="_header_copyright">(C)2019 ASINERUM INTERNATIONAL PROJECT</div>
+<div class="footer" id="_header_copyright">(C)</div>
 </div>
 <script src="https://cdn.jsdelivr.net/gh/asinerum/project/startBroker.js"></script>
 <script src="https://cdn.jsdelivr.net/gh/asinerum/project/menu.js"></script>
