--- a/csb.html
+++ b/csb.html
@@ -26,15 +26,15 @@
 <br/>
 <br/>
 <a name="KEYS"></a>
-<div class="header" id="_header_BipUnlock">SELECTING NETWORK AND DECRYPTING BIP38 KEYSTORE</div>
+<div class="header" id="_header_BipUnlock">SELECT NETWORK AND DECRYPT KEYSTORE</div>
 <hr class="cp"/>
 <div>
 <table class="cover">
-<tr><td class="buttoner"><span class="trlab" id="_label_AuthKstNet"></span></td><td><select disabled class="long" data-change="AuthNetPut" id="network"></select></td></tr>
-<tr><td class="buttoner"><span class="trlab" id="_label_AuthKstRpc"></span></td><td><input disabled class="address" data-change="AuthNetFix" value="https://www.ethercluster.com/etc" id="rpcs"/></td></tr>
-<tr><td class="buttoner"><span class="trlab" id="_label_BipeDecBip"></span></td><td><input class="address" value="?" id="keystore"/></td></tr>
-<tr><td class="buttoner"><span class="trlab" id="_label_BipeDecPwd"></span></td><td><input type="password" class="address" value="xxx" id="password"/></td></tr>
-<tr><td class="buttoner"><a class="button" data-action="BipeUnlock" id="_button_BipDecrypt"></a></td><td>ETHEREUM&nbsp;CLASSIC&nbsp;<span class="result" id="wallet">WALLET</span></td></tr>
+<tr><td class="buttoner"><span class="trlab" id="_label_AuthKstNet">?</span></td><td><select disabled class="long" data-change="AuthNetPut" id="network"></select></td></tr>
+<tr><td class="buttoner"><span class="trlab" id="_label_AuthKstRpc">?</span></td><td><input disabled class="address" data-change="AuthNetFix" value="https://www.ethercluster.com/etc" id="rpcs"/></td></tr>
+<tr><td class="buttoner"><span class="trlab" id="_label_BipeDecBip">?</span></td><td><input class="address" value="?" id="keystore"/></td></tr>
+<tr><td class="buttoner"><span class="trlab" id="_label_BipeDecPwd">?</span></td><td><input type="password" class="address" value="xxx" id="password"/></td></tr>
+<tr><td class="buttoner"><a class="button" data-action="BipeUnlock" id="_button_BipDecrypt">?</a></td><td>ETHEREUM&nbsp;CLASSIC&nbsp;<span class="result" id="wallet">WALLET</span></td></tr>
 </table>
 <div class="result" id="_keystore_status"></div>
 <div class="result" id="_help_keystore"></div>
@@ -42,26 +42,26 @@
 <hr class="cp"/>
 <br/>
 <a name="COST"></a>
-<div class="header" id="_header_costEtc">ETC TRANSACTION COST</div>
+<div class="header" id="_header_costEtc">TRANSACTION COST</div>
 <hr class="cp"/>
 <div>
 <table class="cover">
-<tr><td class="buttoner"><span class="label" id="_label_AuthGasWei"></span></td><td><select class="address" data-change="AuthGasWei" id="txgwei"></select></td></tr>
-<tr><td class="buttoner"><span class="label" id="_label_AuthGasMax"></span></td><td><select class="address" data-change="AuthGasMax" id="maxgas"></select></td></tr>
+<tr><td class="buttoner"><span class="label" id="_label_AuthGasWei">?</span></td><td><select class="address" data-change="AuthGasWei" id="txgwei"></select></td></tr>
+<tr><td class="buttoner"><span class="label" id="_label_AuthGasMax">?</span></td><td><select class="address" data-change="AuthGasMax" id="maxgas"></select></td></tr>
 </table>
 <div class="result" id="_cost_status"></div>
 <div class="result" id="_help_cost"></div>
 </div>
 <hr class="cp"/>
 <br/>
-<a name="ETH"></a>
-<div class="header" id="_header_sendEtc">PERSONAL ETC BALANCE</div>
+<a name="COIN"></a>
+<div class="header" id="_header_sendEtc">PERSONAL BALANCE</div>
 <hr class="cp"/>
 <div>
 <table class="cover">
-<tr><td class="buttoner"><span class="trlab" id="_label_AuthSumEtc">ETC BALANCE</span></td><td><span id="bgether">&nbsp;<span id="_ethers">?</span>&nbsp;</span></td></tr>
-<tr><td class="buttoner"><span class="trlab" id="_label_AuthAdrEtc">ETC RECEIVER</span></td><td><input type="text" class="long" value="0x00" id="to"/></td></tr>
-<tr><td class="buttoner"><a class="button" data-action="AuthPayEth" id="_button_AuthPayEtc">SEND ETC</a></td><td><input type="text" class="money" value="0" id="eth"/>&nbsp;ETC</td></tr>
+<tr><td class="buttoner"><span class="trlab" id="_label_AuthSumEtc">?</span></td><td><span id="bgether">&nbsp;<span id="_ethers">?</span>&nbsp;</span></td></tr>
+<tr><td class="buttoner"><span class="trlab" id="_label_AuthAdrEtc">?</span></td><td><input type="text" class="long" value="0x00" id="to"/></td></tr>
+<tr><td class="buttoner"><a class="button" data-action="AuthPayEth" id="_button_AuthPayEtc">?</a></td><td><input type="text" class="money" value="0" id="eth"/>&nbsp;ETC</td></tr>
 </table>
 <div class="result" id="_sendeth_status"></div>
 <div class="result" id="_sendeth_hash"></div>
