--- a/game.html
+++ b/game.html
@@ -25,13 +25,13 @@
 <hr class="cp"/>
 <div>
 <table class="cover">
-<tr><td class="buttoner"><a class="button" data-action="UserTxView" id="_button_GameTxAddr">GAME ADDRESS</a></td><td><input type="text" class="long" value="0x00" id="txhash"/></td></tr>
-<tr><td class="buttoner"><a class="button" data-action="GameResult" id="_label_GameResult">GAME RESULT</span></td><td><h2><span class="textwarn" id="_gameresult">-</span></h2></td></tr>
-<tr><td class="buttoner"><span class="label" id="_label_GameTxNote">SYSTEM WARNING</span></td><td><span class="textnotice" id="_note_GameTxNote">WARNING</span></td></tr>
-<tr><td class="buttoner"><span class="trlab" id="_label_GameTxInfo">SPECIAL INFO</span></td><td><span id="_gameinfo">-</span></td></tr>
-<tr><td class="buttoner"><span class="trlab" id="_label_GameTxHash">GAME HASH</span></td><td><span id="_txaddress"></span></td></tr>
-<tr><td class="buttoner"><span class="trlab" id="_label_GameTxData">GAME DATA</span></td><td><span id="_txdata"></span></td></tr>
-<tr><td class="buttoner"><a class="button" data-action="GameTxPlay" id="_button_GameTxPlay">PAY TO PLAY</a></td><td><input type="text" class="money" value="" id="gamexut"/>&nbsp;XUT</td></tr>
+<tr><td class="buttoner"><a class="button" data-action="UserTxView" id="_button_GameTxAddr">?</a></td><td><input type="text" class="long" value="0x00" id="txhash"/></td></tr>
+<tr><td class="buttoner"><a class="button" data-action="GameResult" id="_button_GameResult">?</a></td><td><h2><span class="textwarn" id="_gameresult">-</span></h2></td></tr>
+<tr><td class="buttoner"><span class="label" id="_label_GameTxNote">?</span></td><td><span class="textnotice" id="_note_GameTxNote">WARNING</span></td></tr>
+<tr><td class="buttoner"><span class="trlab" id="_label_GameTxInfo">?</span></td><td><span id="_gameinfo">-</span></td></tr>
+<tr><td class="buttoner"><span class="trlab" id="_label_GameTxHash">?</span></td><td><span id="_txaddress"></span></td></tr>
+<tr><td class="buttoner"><span class="trlab" id="_label_GameTxData">?</span></td><td><span id="_txdata"></span></td></tr>
+<tr><td class="buttoner"><a class="button" data-action="GameTxPlay" id="_button_GameTxPlay">?</a></td><td><input type="text" class="money" value="" id="gamexut"/>&nbsp;XUT</td></tr>
 </table>
 <div class="result" id="_game_status"></div>
 <div class="result" id="_game_hash"></div>
@@ -40,25 +40,25 @@
 <hr class="cp"/>
 <br/>
 <a name="GAMER"></a>
-<div class="header" id="_header_gamer">GAME OWNER INFORMATION AND STATS</div>
+<div class="header" id="_header_gamer">GAME OWNER</div>
 <hr class="cp"/>
 <div>
 <table class="cover">
-<tr><td class="buttoner"><a class="button" data-action="UserGoUser" id="_button_GameGoUser">OWNER ADDRESS</a></td><td><input disabled type="text" class="long" data-change="UserGoUser" id="user"/></td></tr>
-<tr><td class="buttoner"><span class="label" id="_label_Wallet1Xut">XUT BALANCE</span></td><td><span id="_xuteng_user"></span>&nbsp;XUT</td></tr>
-<tr><td class="buttoner"><span class="label" id="_label_Wallet2Eth">ETH BALANCE</span></td><td><span id="_ethers_user"></span>&nbsp;ETH</td></tr>
-<tr><td class="buttoner"><span class="trlab" id="_label_Wallet5Rol">ROLE</span></td><td><span id="_pteRole_user"></span></td></tr>
-<tr><td class="buttoner"><span class="trlab" id="_label_Wallet6Rnk">RANK</span></td><td><span id="_pteTick_user"></span></td></tr>
-<tr><td class="buttoner"><span class="trlab" id="_label_Wallet7Lvl">LEVEL</span></td><td><span id="_pteLevl_user"></span></td></tr>
-<tr><td class="buttoner"><span class="trlab" id="_label_UserExFile">USER PROFILE</span></td><td><span id="_userProfile"></span></td></tr>
-<tr><td class="buttoner"><span class="trlab" id="_label_UserExHome">USER DOMAIN</span></td><td><span id="_userDomain"></span></td></tr>
+<tr><td class="buttoner"><a class="button" data-action="UserGoUser" id="_button_GameGoUser">?</a></td><td><input disabled type="text" class="long" data-change="UserGoUser" id="user"/></td></tr>
+<tr><td class="buttoner"><span class="label" id="_label_Wallet1Xut">?</span></td><td><span id="_xuteng_user"></span>&nbsp;XUT</td></tr>
+<tr><td class="buttoner"><span class="label" id="_label_Wallet2Eth">?</span></td><td><span id="_ethers_user"></span>&nbsp;<span class="coin">COIN</span></td></tr>
+<tr><td class="buttoner"><span class="trlab" id="_label_Wallet5Rol">?</span></td><td><span id="_pteRole_user"></span></td></tr>
+<tr><td class="buttoner"><span class="trlab" id="_label_Wallet6Rnk">?</span></td><td><span id="_pteTick_user"></span></td></tr>
+<tr><td class="buttoner"><span class="trlab" id="_label_Wallet7Lvl">?</span></td><td><span id="_pteLevl_user"></span></td></tr>
+<tr><td class="buttoner"><span class="trlab" id="_label_UserExFile">?</span></td><td><span id="_userProfile"></span></td></tr>
+<tr><td class="buttoner"><span class="trlab" id="_label_UserExHome">?</span></td><td><span id="_userDomain"></span></td></tr>
 </table>
 <div class="result" id="_gamer_status"></div>
 <div class="result" id="_help_gamer"></div>
 </div>
 <hr class="cp"/>
 <br/>
-<div class="footer" id="_header_copyright">(C)2019 ASINERUM INTERNATIONAL PROJECT</div>
+<div class="footer" id="_header_copyright">(C)</div>
 </div>
 <script src="https://cdn.jsdelivr.net/gh/asinerum/project/startBroker.js"></script>
 <script src="https://cdn.jsdelivr.net/gh/asinerum/project/menu.js"></script>
