--- a/sell.html
+++ b/sell.html
@@ -21,24 +21,24 @@
 <br/>
 <br/>
 <a name="SELL"></a>
-<div class="header" id="_header_sell">DIRECTLY SELL XUTENG TOKENS TO SYSTEM FUND</div>
+<div class="header" id="_header_sell">SELL TOKENS</div>
 <hr class="cp"/>
 <div>
 <table class="cover">
-<tr><td class="buttoner"><span class="trlab" id="_label_Syssel0Xut">YOUR XUT BALANCE</span></td><td><span class="class_xuteng"></span></td></tr>
-<tr><td class="buttoner"><span class="trlab" id="_label_Syssel1Eth">YOUR ETH BALANCE</span></td><td><span class="class_ethers"></span></td></tr>
-<tr><td class="buttoner"><span class="trlab" id="_label_Syssel2Tpe">EXCHANGE RATE</span></td><td><span class="class_buyAtTpe"></span>&nbsp;ETH/XUT</td></tr>
-<tr><td class="buttoner"><span class="trlab" id="_label_Syssel3Max">ETH PAY FUND</span></td><td><span class="class_ethersOfXut"></span>&nbsp;ETH</td></tr>
-<tr><td class="buttoner"><span class="trlab" id="_label_Syssel4Pay">XUT TO SELL</span></td><td><input type="text" class="money" data-change="EthGet" value="" id="xut2xut"/>&nbsp;XUT</td></tr>
-<tr><td class="buttoner"><span class="trlab" id="_label_Syssel5Get">ETH TO GET</span></td><td><input disabled type="text" class="money" value="" id="eth2get"/>&nbsp;ETH</td></tr>
-<tr><td class="buttoner"><a class="button" data-action="XutXut" id="_button_XutXut">SELL NOW</a></td><td><span class="textnotice" id="_note_XutXut"></span></td></tr>
+<tr><td class="buttoner"><span class="trlab" id="_label_Syssel0Xut">?</span></td><td><span class="class_xuteng"></span></td></tr>
+<tr><td class="buttoner"><span class="trlab" id="_label_Syssel1Eth">?</span></td><td><span class="class_ethers"></span></td></tr>
+<tr><td class="buttoner"><span class="trlab" id="_label_Syssel2Tpe">?</span></td><td><span class="class_buyAtTpe"></span>&nbsp;<span class="coin">COIN</span>/XUT</td></tr>
+<tr><td class="buttoner"><span class="trlab" id="_label_Syssel3Max">?</span></td><td><span class="class_ethersOfXut"></span>&nbsp;<span class="coin">COIN</span></td></tr>
+<tr><td class="buttoner"><span class="trlab" id="_label_Syssel4Pay">?</span></td><td><input type="text" class="money" data-change="EthGet" value="" id="xut2xut"/>&nbsp;XUT</td></tr>
+<tr><td class="buttoner"><span class="trlab" id="_label_Syssel5Get">?</span></td><td><input disabled type="text" class="money" value="" id="eth2get"/>&nbsp;<span class="coin">COIN</span></td></tr>
+<tr><td class="buttoner"><a class="button" data-action="XutXut" id="_button_XutXut">?</a></td><td><span class="textnotice" id="_note_XutXut"></span></td></tr>
 </table>
 <div class="result" id="mm_sell"></div>
 <div class="result" id="_help_sell"></div>
 </div>
 <hr class="cp"/>
 <br/>
-<div class="footer" id="_header_copyright">(C)2019 ASINERUM INTERNATIONAL PROJECT</div>
+<div class="footer" id="_header_copyright">(C)</div>
 </div>
 <script src="https://cdn.jsdelivr.net/gh/asinerum/project/startBroker.js"></script>
 <script src="https://cdn.jsdelivr.net/gh/asinerum/project/menu.js"></script>
