--- a/wallet.html
+++ b/wallet.html
@@ -26,52 +26,52 @@
 <br/>
 <br/>
 <a name="ACCOUNT"></a>
-<div class="header" id="_header_BipAccount">CREATING A PERMANENT ACCOUNT</div>
+<div class="header" id="_header_BipAccount">CREATE ACCOUNT</div>
 <hr class="cp"/>
 <div>
 <table class="cover">
-<tr><td class="buttoner"><a class="button" data-action="BipeAccNew" id="_button_BipeAccNew">CREATE</a></td><td><span class="textnotice" id="_label_BipeAccNew"></span></td></tr>
-<tr><td class="buttoner"><span class="trlab" id="_label_BipeAccBtc">BITCOIN WALLET</span></td><td><input type="text" class="address" value="" id="new_btc"/></td></tr>
-<tr><td class="buttoner"><span class="trlab" id="_label_BipeAccEth">ETHEREUM WALLET</span></td><td><input type="text" class="address" value="" id="new_eth"/></td></tr>
-<tr><td class="buttoner"><span class="trlab" id="_label_BipeAccKey">BTC PRIVATE KEY</span></td><td><input type="text" class="copy" value="" id="new_key"/></td></tr>
-<tr><td class="buttoner"><span class="trlab" id="_label_BipeAccHex">ETH PRIVATE KEY</span></td><td><input type="text" class="copy" value="" id="new_hex"/></td></tr>
-<tr><td class="buttoner"><span class="label" id="_label_BipCaution">CAUTION</span></td><td><span class="textnotice" id="_note_BipCaution">PRIVATE KEYS MUST BE KEPT SAFE AND SECRET</span></td></tr>
+<tr><td class="buttoner"><a class="button" data-action="BipeAccNew" id="_button_BipeAccNew">?</a></td><td><span class="textnotice" id="_label_BipeAccNew"></span></td></tr>
+<tr><td class="buttoner"><span class="trlab" id="_label_BipeAccBtc">?</span></td><td><input type="text" class="address" value="" id="new_btc"/></td></tr>
+<tr><td class="buttoner"><span class="trlab" id="_label_BipeAccEth">?</span></td><td><input type="text" class="address" value="" id="new_eth"/></td></tr>
+<tr><td class="buttoner"><span class="trlab" id="_label_BipeAccKey">?</span></td><td><input type="text" class="copy" value="" id="new_key"/></td></tr>
+<tr><td class="buttoner"><span class="trlab" id="_label_BipeAccHex">?</span></td><td><input type="text" class="copy" value="" id="new_hex"/></td></tr>
+<tr><td class="buttoner"><span class="label" id="_label_BipCaution">?</span></td><td><span class="textnotice" id="_note_BipCaution">?</span></td></tr>
 </table>
-<div class="result" id="_account_status"><span id="_note_BipAccount">BE SURE THAT NOBODY CAN SEE YOUR SCREEN THEN CLICK "CREATE"</span></div>
+<div class="result" id="_account_status"><span id="_note_BipAccount">?</span></div>
 <div class="result" id="_help_account"></div>
 </div>
 <hr class="cp"/>
 <br/>
 <a name="ENCODE"></a>
-<div class="header" id="_header_BipEncrypt">ENCRYPTING AN ORIGINAL PRIVATE KEY</div>
+<div class="header" id="_header_BipEncrypt">ENCRYPT PRIVATE KEY</div>
 <hr class="cp"/>
 <div>
 <table class="cover">
-<tr><td class="buttoner"><span class="trlab" id="_label_BipeOldKey">BTC/ETH PRIVATE KEY</span></td><td><input type="text" class="copy" value="" id="old_key"/></td></tr>
-<tr><td class="buttoner"><span class="trlab" id="_label_BipeEncPwd">PASSCODE TO ENCRYPT</span></td><td><input type="password" class="address" value="" id="enc_pwd"/></td></tr>
-<tr><td class="buttoner"><a class="button" data-action="BipEncrypt" id="_button_BipEncrypt">ENCRYPT</a></td><td><span class="textnotice" id="_label_BipEncrypt"></span></td></tr>
-<tr><td class="buttoner"><span class="trlab" id="_label_BipeOldBtc">BITCOIN WALLET</span></td><td><input type="text" class="address" value="" id="old_btc"/></td></tr>
-<tr><td class="buttoner"><span class="trlab" id="_label_BipeOldEth">ETHEREUM WALLET</span></td><td><input type="text" class="address" value="" id="old_eth"/></td></tr>
-<tr><td class="buttoner"><span class="trlab" id="_label_BipeEncBip">BIP38 ENCRYPTED KEY</span></td><td><input type="text" class="address" value="" id="enc_bip"/></td></tr>
-<tr><td class="buttoner"><span class="label" id="_label_BipWarning">WARNING</span></td><td><span class="textnotice" id="_note_BipWarning">PASSCODE CAN BE NEITHER RESTORED NOR RESET</span></td></tr>
+<tr><td class="buttoner"><span class="trlab" id="_label_BipeOldKey">?</span></td><td><input type="text" class="copy" value="" id="old_key"/></td></tr>
+<tr><td class="buttoner"><span class="trlab" id="_label_BipeEncPwd">?</span></td><td><input type="password" class="address" value="" id="enc_pwd"/></td></tr>
+<tr><td class="buttoner"><a class="button" data-action="BipEncrypt" id="_button_BipEncrypt">?</a></td><td><span class="textnotice" id="_label_BipEncrypt"></span></td></tr>
+<tr><td class="buttoner"><span class="trlab" id="_label_BipeOldBtc">?</span></td><td><input type="text" class="address" value="" id="old_btc"/></td></tr>
+<tr><td class="buttoner"><span class="trlab" id="_label_BipeOldEth">?</span></td><td><input type="text" class="address" value="" id="old_eth"/></td></tr>
+<tr><td class="buttoner"><span class="trlab" id="_label_BipeEncBip">?</span></td><td><input type="text" class="address" value="" id="enc_bip"/></td></tr>
+<tr><td class="buttoner"><span class="label" id="_label_BipWarning">?</span></td><td><span class="textnotice" id="_note_BipWarning">?</span></td></tr>
 </table>
-<div class="result" id="_encrypt_status"><span id="_note_BipEncrypt">TIPS: ENCRYPTED KEY SHOULD BE PRINTED TO PAPER</span></div>
+<div class="result" id="_encrypt_status"><span id="_note_BipEncrypt">?</span></div>
 <div class="result" id="_help_encrypt"></div>
 </div>
 <hr class="cp"/>
 <br/>
 <a name="DECODE"></a>
-<div class="header" id="_header_BipDecrypt">DECRYPTING AN ENCRYPTED KEY</div>
+<div class="header" id="_header_BipDecrypt">DECRYPT ENCRYPTED KEY</div>
 <hr class="cp"/>
 <div>
 <table class="cover">
-<tr><td class="buttoner"><span class="trlab" id="_label_BipeDecBip">BIP38 ENCRYPTED KEY</span></td><td><input type="text" class="address" value="" id="dec_bip"/></td></tr>
-<tr><td class="buttoner"><span class="trlab" id="_label_BipeDecPwd">PASSCODE TO DECRYPT</span></td><td><input type="password" class="address" value="" id="dec_pwd"/></td></tr>
-<tr><td class="buttoner"><a class="button" data-action="BipDecrypt" id="_button_BipDecrypt">DECRYPT</a></td><td><span class="textnotice" id="_label_BipDecrypt"></span></td></tr>
-<tr><td class="buttoner"><span class="trlab" id="_label_BipeExpBtc">BITCOIN WALLET</span></td><td><input type="text" class="address" value="" id="exp_btc"/></td></tr>
-<tr><td class="buttoner"><span class="trlab" id="_label_BipeExpEth">ETHEREUM WALLET</span></td><td><input type="text" class="address" value="" id="exp_eth"/></td></tr>
-<tr><td class="buttoner"><span class="trlab" id="_label_BipeExpKey">BTC PRIVATE KEY</span></td><td><input type="text" class="copy" value="" id="exp_key"/></td></tr>
-<tr><td class="buttoner"><span class="trlab" id="_label_BipeExpHex">ETH PRIVATE KEY</span></td><td><input type="text" class="copy" value="" id="exp_hex"/></td></tr>
+<tr><td class="buttoner"><span class="trlab" id="_label_BipeDecBip">?</span></td><td><input type="text" class="address" value="" id="dec_bip"/></td></tr>
+<tr><td class="buttoner"><span class="trlab" id="_label_BipeDecPwd">?</span></td><td><input type="password" class="address" value="" id="dec_pwd"/></td></tr>
+<tr><td class="buttoner"><a class="button" data-action="BipDecrypt" id="_button_BipDecrypt">?</a></td><td><span class="textnotice" id="_label_BipDecrypt"></span></td></tr>
+<tr><td class="buttoner"><span class="trlab" id="_label_BipeExpBtc">?</span></td><td><input type="text" class="address" value="" id="exp_btc"/></td></tr>
+<tr><td class="buttoner"><span class="trlab" id="_label_BipeExpEth">?</span></td><td><input type="text" class="address" value="" id="exp_eth"/></td></tr>
+<tr><td class="buttoner"><span class="trlab" id="_label_BipeExpKey">?</span></td><td><input type="text" class="copy" value="" id="exp_key"/></td></tr>
+<tr><td class="buttoner"><span class="trlab" id="_label_BipeExpHex">?</span></td><td><input type="text" class="copy" value="" id="exp_hex"/></td></tr>
 </table>
 <div class="result" id="_decrypt_status"></div>
 <div class="result" id="_help_decrypt"></div>
@@ -83,11 +83,11 @@
 <hr class="cp"/>
 <div>
 <table class="cover">
-<tr><td class="buttoner"><span class="trlab" id="_label_BipAdAbout">ABOUT</span></td><td><span id="_note_BipAdAbout">CLIENT SIDE PAPER WALLET GENERATOR</span></td></tr>
-<tr><td class="buttoner"><span class="trlab" id="_label_BipAdUsage">USAGE</span></td><td><span id="_note_BipAdUsage">PAGES SHOULD BE SAVED AND SEEN OFFLINE</span></td></tr>
-<tr><td class="buttoner"><span class="trlab" id="_label_BipAdRight">COPYRIGHT</span></td><td><span id="_note_BipAdRight">FREE TO USE FOR ANY PURPOSE WITH NO WARRANTY</span></td></tr>
-<tr><td class="buttoner"><span class="trlab" id="_label_BipAdPrBtc">BTC DONATION</span></td><td><a target="_blank" href="https://cdn.jsdelivr.net/gh/asinerum/project/gui/1CXsNnd148Dv7Nj9p4oTBYkVJ8NDvghac5.png"><span class="result">1CXsNnd148Dv7Nj9p4oTBYkVJ8NDvghac5</span></a></td></tr>
-<tr><td class="buttoner"><span class="trlab" id="_label_BipAdPrEth">ETH DONATION</span></td><td><a target="_blank" href="https://cdn.jsdelivr.net/gh/asinerum/project/gui/0x537ca62B4c232af1ef82294BE771B824cCc078Ff.png"><span class="result">0x537ca62B4c232af1ef82294BE771B824cCc078Ff</span></a></td></tr>
+<tr><td class="buttoner"><span class="trlab" id="_label_BipAdAbout">?</span></td><td><span id="_note_BipAdAbout">?</span></td></tr>
+<tr><td class="buttoner"><span class="trlab" id="_label_BipAdUsage">?</span></td><td><span id="_note_BipAdUsage">?</span></td></tr>
+<tr><td class="buttoner"><span class="trlab" id="_label_BipAdRight">?</span></td><td><span id="_note_BipAdRight">?</span></td></tr>
+<tr><td class="buttoner"><span class="trlab" id="_label_BipAdPrBtc">?</span></td><td><a target="_blank" href="https://cdn.jsdelivr.net/gh/asinerum/project/gui/1CXsNnd148Dv7Nj9p4oTBYkVJ8NDvghac5.png"><span class="result">1CXsNnd148Dv7Nj9p4oTBYkVJ8NDvghac5</span></a></td></tr>
+<tr><td class="buttoner"><span class="trlab" id="_label_BipAdPrEth">?</span></td><td><a target="_blank" href="https://cdn.jsdelivr.net/gh/asinerum/project/gui/0x537ca62B4c232af1ef82294BE771B824cCc078Ff.png"><span class="result">0x537ca62B4c232af1ef82294BE771B824cCc078Ff</span></a></td></tr>
 </table>
 <div class="result" id="_ad_status"></div>
 <div class="result" id="_help_ad"></div>
