--- a/bet.html
+++ b/bet.html
@@ -21,32 +21,32 @@
 <br/>
 <br/>
 <a name="DOC"></a>
-<div class="header" id="_header_docgame">PUBLISH A XUTENG GAME</div>
+<div class="header" id="_header_docgame">PUBLISH GAME</div>
 <hr class="cp"/>
 <div>
 <table class="cover">
-<tr><td class="buttoner"><span class="trlab" id="_label_GameDocUtc">GAME CLOSING TIME</span></td><td>
+<tr><td class="buttoner"><span class="trlab" id="_label_GameDocUtc">?</span></td><td>
   <select data-change="UtcGet" id="year"></select>
   <select data-change="UtcGet" id="month"></select>
   <select data-change="UtcGet" id="day"></select>&nbsp;
   <select data-change="UtcGet" id="hour"></select>
   <select data-change="UtcGet" id="minute"></select>&nbsp;UTC</td></tr>
-<tr><td class="buttoner"><span class="trlab" id="_label_GameDocUts">GAME TIMESTAMP</span></td><td><span id="_uts"></span>&nbsp;<span id="_utstring"></span></td></tr>
-<tr><td class="buttoner"><span class="trlab" id="_label_GameDocMin">MINIMUM BET</span></td><td><input type="text" class="money" value="0" id="xutMin"/>&nbsp;XUT</td></tr>
-<tr><td class="buttoner"><span class="trlab" id="_label_GameDocMax">MAXIMUM BET</span></td><td><input type="text" class="money" value="0" id="xutMax"/>&nbsp;XUT</td></tr>
-<tr><td class="buttoner"><span class="trlab" id="_label_GameDocRew">ODDS/REWARDS</span></td><td>
+<tr><td class="buttoner"><span class="trlab" id="_label_GameDocUts">?</span></td><td><span id="_uts"></span>&nbsp;<span id="_utstring"></span></td></tr>
+<tr><td class="buttoner"><span class="trlab" id="_label_GameDocMin">?</span></td><td><input type="text" class="money" value="0" id="xutMin"/>&nbsp;XUT</td></tr>
+<tr><td class="buttoner"><span class="trlab" id="_label_GameDocMax">?</span></td><td><input type="text" class="money" value="0" id="xutMax"/>&nbsp;XUT</td></tr>
+<tr><td class="buttoner"><span class="trlab" id="_label_GameDocRew">?</span></td><td>
   <input type="text" class="money" id="rewards6"/>
   <input type="text" class="money" id="rewards5"/>
   <input type="text" class="money" id="rewards4"/></td></tr>
-<tr><td class="buttoner"><span class="trlab" id="_label_GameDocFrm">GAME FORMAT</span></td><td>
+<tr><td class="buttoner"><span class="trlab" id="_label_GameDocFrm">?</span></td><td>
   <select class="long" id="docform">
   <option value="bet310">home-draw-away</option>
   <option value="bet210">win-tie-lose</option>
   <option value="bet1v0">win-lose</option>
   <option value="bet1c0">over-under</option>
   </select></td></tr>
-<tr><td class="buttoner"><span class="trlab" id="_label_GameDocDat">GAME HEADER</span></td><td><input type="text" class="long" value="" id="docdat"/></td></tr>
-<tr><td class="buttoner"><a class="button" data-action="GameDocSet" id="_button_GameDocSet">PUBLISH</a></td><td><span class="textnotice" id="_note_GameDocSet">EXCLUDING GAS FEE</span></td></tr>
+<tr><td class="buttoner"><span class="trlab" id="_label_GameDocDat">?</span></td><td><input type="text" class="long" value="" id="docdat"/></td></tr>
+<tr><td class="buttoner"><a class="button" data-action="GameDocSet" id="_button_GameDocSet">?</a></td><td><span class="textnotice" id="_note_GameDocSet">?</span></td></tr>
 </table>
 <div class="result" id="_doc_status"></div>
 <div class="result" id="_doc_hash"></div>
@@ -54,20 +54,20 @@
 <hr class="cp"/>
 <br/>
 <a name="REVIEW"></a>
-<div class="header" id="_header_reviewgame">REVIEW A PUBLISHED GAME</div>
+<div class="header" id="_header_reviewgame">REVIEW GAME</div>
 <hr class="cp"/>
 <div>
 <table class="cover">
-<tr><td class="buttoner"><a class="button" data-action="UserTxView" id="_button_GameTxView">GAME HASH</a></td><td><input type="text" class="long" value="0x00" id="txhash"/></td></tr>
-<tr><td class="buttoner"><span class="trlab" id="_label_GameTxAddr">GAME ADDRESS</span></td><td><span id="_txaddress"></span></td></tr>
-<tr><td class="buttoner"><span class="trlab" id="_label_GameTxData">GAME DATA</span></td><td><span id="_txdata"></span></td></tr>
+<tr><td class="buttoner"><a class="button" data-action="UserTxView" id="_button_GameTxView">?</a></td><td><input type="text" class="long" value="0x00" id="txhash"/></td></tr>
+<tr><td class="buttoner"><span class="trlab" id="_label_GameTxAddr">?</span></td><td><span id="_txaddress"></span></td></tr>
+<tr><td class="buttoner"><span class="trlab" id="_label_GameTxData">?</span></td><td><span id="_txdata"></span></td></tr>
 </table>
 <div class="result" id="_review_status"></div>
 <div class="result" id="_review_hash"></div>
 </div>
 <hr class="cp"/>
 <br/>
-<div class="footer" id="_header_copyright">(C)2019 ASINERUM INTERNATIONAL PROJECT</div>
+<div class="footer" id="_header_copyright">(C)</div>
 </div>
 <script src="https://cdn.jsdelivr.net/gh/asinerum/project/startBroker.js"></script>
 <script src="https://cdn.jsdelivr.net/gh/asinerum/project/menu.js"></script>
