--- a/ebet.html
+++ b/ebet.html
@@ -2,7 +2,7 @@
 <meta charset="utf-8">
 <html lang="en">
 <head>
-<title>ASINERUM ETHEREUM GAME</title>
+<title>ASINERUM GAME</title>
 <link href="https://cdn.jsdelivr.net/gh/asinerum/project/favicon.ico" rel="icon" type="image/x-icon"/>
 <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css"/>
 <link href="https://cdn.jsdelivr.net/npm/trumbowyg@2.21.0/dist/ui/trumbowyg.min.css" rel="stylesheet" type="text/css"/>
@@ -21,20 +21,20 @@
 <br/>
 <br/>
 <a name="DOC"></a>
-<div class="header" id="_header_docgame">PUBLISH AN ETHEREUM GAME</div>
+<div class="header" id="_header_docgame">PUBLISH GAME</div>
 <hr class="cp"/>
 <div>
 <table class="cover">
-<tr><td class="buttoner"><span class="trlab" id="_label_GameDocUtc">GAME CLOSING TIME</span></td><td>
+<tr><td class="buttoner"><span class="trlab" id="_label_GameDocUtc">?</span></td><td>
   <select data-change="UtcGet" id="year"></select>
   <select data-change="UtcGet" id="month"></select>
   <select data-change="UtcGet" id="day"></select>&nbsp;
   <select data-change="UtcGet" id="hour"></select>
   <select data-change="UtcGet" id="minute"></select>&nbsp;UTC</td></tr>
-<tr><td class="buttoner"><span class="trlab" id="_label_GameDocUts">GAME TIMESTAMP</span></td><td><span id="_uts"></span>&nbsp;<span id="_utstring"></span></td></tr>
-<tr><td class="buttoner"><span class="trlab" id="_label_GameDocMin">MINIMUM BET</span></td><td><input type="text" class="money" value="0" id="ethMin"/>&nbsp;ETH</td></tr>
-<tr><td class="buttoner"><span class="trlab" id="_label_GameDocMax">MAXIMUM BET</span></td><td><input type="text" class="money" value="0" id="ethMax"/>&nbsp;ETH</td></tr>
-<tr><td class="buttoner"><span class="trlab" id="_label_GameDocRew">ODDS/REWARDS</span></td><td>
+<tr><td class="buttoner"><span class="trlab" id="_label_GameDocUts">?</span></td><td><span id="_uts"></span>&nbsp;<span id="_utstring"></span></td></tr>
+<tr><td class="buttoner"><span class="trlab" id="_label_GameDocMin">?</span></td><td><input type="text" class="money" value="0" id="ethMin"/>&nbsp;<span class="coin">COIN</span></td></tr>
+<tr><td class="buttoner"><span class="trlab" id="_label_GameDocMax">?</span></td><td><input type="text" class="money" value="0" id="ethMax"/>&nbsp;<span class="coin">COIN</span></td></tr>
+<tr><td class="buttoner"><span class="trlab" id="_label_GameDocRew">?</span></td><td>
   <input type="text" class="money" id="rewards6"/>
   <input type="text" class="money" id="rewards5"/>
   <input type="text" class="money" id="rewards4"/>
@@ -42,7 +42,7 @@
   <input type="text" class="money" id="rewards2"/>
   <input type="text" class="money" id="rewards1"/>
   <input type="text" class="money" id="rewards0"/></td></tr>
-<tr><td class="buttoner"><span class="trlab" id="_label_GameDocFrm">GAME FORMAT</span></td><td>
+<tr><td class="buttoner"><span class="trlab" id="_label_GameDocFrm">?</span></td><td>
   <select class="long" id="docform">
   <option value="bet310">BET home-draw-away</option>
   <option value="bet210">BET win-tie-lose</option>
@@ -56,8 +56,8 @@
   <option value="tossup">TOSSUP 1x1</option>
   <option value="de1x99">REGIONAL LOTTO 1x99</option>
   </select></td></tr>
-<tr><td class="buttoner"><span class="trlab" id="_label_GameDocDat">GAME HEADER</span></td><td><input type="text" class="long" value="" id="docdat"/></td></tr>
-<tr><td class="buttoner"><a class="button" data-action="GameDocLet" id="_button_GameDocSet">PUBLISH</a></td><td><span class="textnotice" id="_note_GameDocSet">EXCLUDING GAS FEE</span></td></tr>
+<tr><td class="buttoner"><span class="trlab" id="_label_GameDocDat">?</span></td><td><input type="text" class="long" value="" id="docdat"/></td></tr>
+<tr><td class="buttoner"><a class="button" data-action="GameDocLet" id="_button_GameDocSet">?</a></td><td><span class="textnotice" id="_note_GameDocSet">EXCLUDING GAS FEE</span></td></tr>
 </table>
 <div class="result" id="_doc_status"></div>
 <div class="result" id="_doc_hash"></div>
@@ -65,20 +65,20 @@
 <hr class="cp"/>
 <br/>
 <a name="REVIEW"></a>
-<div class="header" id="_header_reviewgame">REVIEW A PUBLISHED GAME</div>
+<div class="header" id="_header_reviewgame">REVIEW GAME</div>
 <hr class="cp"/>
 <div>
 <table class="cover">
-<tr><td class="buttoner"><a class="button" data-action="UserTxView" id="_button_GameTxView">GAME HASH</a></td><td><input type="text" class="long" value="0x00" id="txhash"/></td></tr>
-<tr><td class="buttoner"><span class="trlab" id="_label_GameTxAddr">GAME ADDRESS</span></td><td><span id="_txaddress"></span></td></tr>
-<tr><td class="buttoner"><span class="trlab" id="_label_GameTxData">GAME DATA</span></td><td><span id="_txdata"></span></td></tr>
+<tr><td class="buttoner"><a class="button" data-action="UserTxView" id="_button_GameTxView">?</a></td><td><input type="text" class="long" value="0x00" id="txhash"/></td></tr>
+<tr><td class="buttoner"><span class="trlab" id="_label_GameTxAddr">?</span></td><td><span id="_txaddress"></span></td></tr>
+<tr><td class="buttoner"><span class="trlab" id="_label_GameTxData">?</span></td><td><span id="_txdata"></span></td></tr>
 </table>
 <div class="result" id="_review_status"></div>
 <div class="result" id="_review_hash"></div>
 </div>
 <hr class="cp"/>
 <br/>
-<div class="footer" id="_header_copyright">(C)2019 ASINERUM INTERNATIONAL PROJECT</div>
+<div class="footer" id="_header_copyright">(C)</div>
 </div>
 <script src="https://cdn.jsdelivr.net/gh/asinerum/project/startBroker.js"></script>
 <script src="https://cdn.jsdelivr.net/gh/asinerum/project/menu.js"></script>
