--- a/user.html
+++ b/user.html
@@ -25,26 +25,26 @@
 <hr class="cp"/>
 <div>
 <table class="cover">
-<tr><td class="buttoner"><a class="button" data-action="UserGoUser" id="_button_UserGoUser">ADDRESS OR ALIAS</a></td><td><input type="text" class="long" data-change="UserGoUser" value="0x00" id="user"/></td></tr>
-<tr><td class="buttoner"><span class="label" id="_label_AuthorAddr">ETHEREUM WALLET</span></td><td><span id="_userWallet"></span></td></tr>
-<tr><td class="buttoner"><span class="label" id="_label_Wallet1Xut">XUT BALANCE</span></td><td><span id="_xuteng_user"></span>&nbsp;XUT</td></tr>
-<tr><td class="buttoner"><span class="label" id="_label_Wallet2Eth">ETH BALANCE</span></td><td><span id="_ethers_user"></span>&nbsp;ETH</td></tr>
-<tr><td class="buttoner"><span class="trlab" id="_label_Wallet3Req">REQUESTS TO BUY</span></td><td><span id="_pteBuys_user"></span></td></tr>
-<tr><td class="buttoner"><span class="trlab" id="_label_Wallet4Ofr">OFFERS TO SELL</span></td><td><span id="_pteSell_user"></span></td></tr>
-<tr><td class="buttoner"><span class="trlab" id="_label_Wallet5Rol">ROLE</span></td><td><span id="_pteRole_user"></span></td></tr>
-<tr><td class="buttoner"><span class="trlab" id="_label_Wallet6Rnk">RANK</span></td><td><span id="_pteTick_user"></span></td></tr>
-<tr><td class="buttoner"><span class="trlab" id="_label_Wallet7Lvl">LEVEL</span></td><td><span id="_pteLevl_user"></span></td></tr>
-<tr><td class="buttoner"><span class="trlab" id="_label_Wallet8Mem">MEMBERS</span></td><td><span id="_pteRegCount_user"></span></td></tr>
-<tr><td class="buttoner"><span class="trlab" id="_label_Wallet9Fee">MEMBER FEE</span></td><td><span id="_pteFee_user"></span>&nbsp;XUT/YEAR</td></tr>
-<tr><td class="buttoner"><span class="trlab" id="_label_UserExFile">USER PROFILE</span></td><td><span id="_userProfile"></span></td></tr>
-<tr><td class="buttoner"><span class="trlab" id="_label_UserExHome">USER DOMAIN</span></td><td><span id="_userDomain"></span></td></tr>
+<tr><td class="buttoner"><a class="button" data-action="UserGoUser" id="_button_UserGoUser">?</a></td><td><input type="text" class="long" data-change="UserGoUser" value="0x00" id="user"/></td></tr>
+<tr><td class="buttoner"><span class="label" id="_label_AuthorAddr">?</span></td><td><span id="_userWallet"></span></td></tr>
+<tr><td class="buttoner"><span class="label" id="_label_Wallet1Xut">?</span></td><td><span id="_xuteng_user"></span>&nbsp;XUT</td></tr>
+<tr><td class="buttoner"><span class="label" id="_label_Wallet2Eth">?</span></td><td><span id="_ethers_user"></span>&nbsp;<span class="coin">COIN</span></td></tr>
+<tr><td class="buttoner"><span class="trlab" id="_label_Wallet3Req">?</span></td><td><span id="_pteBuys_user"></span></td></tr>
+<tr><td class="buttoner"><span class="trlab" id="_label_Wallet4Ofr">?</span></td><td><span id="_pteSell_user"></span></td></tr>
+<tr><td class="buttoner"><span class="trlab" id="_label_Wallet5Rol">?</span></td><td><span id="_pteRole_user"></span></td></tr>
+<tr><td class="buttoner"><span class="trlab" id="_label_Wallet6Rnk">?</span></td><td><span id="_pteTick_user"></span></td></tr>
+<tr><td class="buttoner"><span class="trlab" id="_label_Wallet7Lvl">?</span></td><td><span id="_pteLevl_user"></span></td></tr>
+<tr><td class="buttoner"><span class="trlab" id="_label_Wallet8Mem">?</span></td><td><span id="_pteRegCount_user"></span></td></tr>
+<tr><td class="buttoner"><span class="trlab" id="_label_Wallet9Fee">?</span></td><td><span id="_pteFee_user"></span>&nbsp;XUT/YEAR</td></tr>
+<tr><td class="buttoner"><span class="trlab" id="_label_UserExFile">?</span></td><td><span id="_userProfile"></span></td></tr>
+<tr><td class="buttoner"><span class="trlab" id="_label_UserExHome">?</span></td><td><span id="_userDomain"></span></td></tr>
 </table>
 <div class="result" id="_user_status"></div>
 <div class="result" id="_help_user"></div>
 </div>
 <hr class="cp"/>
 <br/>
-<div class="footer" id="_header_copyright">(C)2019 ASINERUM INTERNATIONAL PROJECT</div>
+<div class="footer" id="_header_copyright">(C)</div>
 </div>
 <script src="https://cdn.jsdelivr.net/gh/asinerum/project/startBroker.js"></script>
 <script src="https://cdn.jsdelivr.net/gh/asinerum/project/menu.js"></script>
