--- a/test.html
+++ b/test.html
@@ -2,25 +2,30 @@
 <meta charset="utf-8">
 <html>
   <head>
-  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
-  <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/asinerum/project/gui/fonts.css"/>
-  <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/asinerum/project/gui/style.css"/>
+  <link href="https://cdn.jsdelivr.net/gh/asinerum/project/favicon.ico" rel="icon" type="image/x-icon"/>
+  <link href="https://cdn.jsdelivr.net/gh/asinerum/project/gui/_trumbowyg.css" rel="stylesheet" type="text/css"/>
+  <link href="https://cdn.jsdelivr.net/gh/asinerum/project/gui/fonts.css" rel="stylesheet" type="text/css"/>
+  <link href="https://cdn.jsdelivr.net/gh/asinerum/project/gui/style.css" rel="stylesheet" type="text/css"/>
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css"/>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.6/angular.min.js"></script>
   <script src="https://cdn.jsdelivr.net/gh/asinerum/project/scr/_web3js.js"></script>
   <script src="https://cdn.jsdelivr.net/gh/asinerum/project/scr/_ethereumjs-tx.js"></script>
+  <script src="https://cdn.jsdelivr.net/gh/asinerum/project/scr/_trumbowyg.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/gh/asinerum/project/scr/_bitcoinjs.js"></script>
+  <script src="https://cdn.jsdelivr.net/gh/asinerum/project/scr/_decimal.js"></script>
+  <script src="https://cdn.jsdelivr.net/gh/asinerum/project/scr/_axios.js"></script>
   <script src="https://cdn.jsdelivr.net/gh/asinerum/project/scr/_bip.js"></script>
   <script src="https://cdn.jsdelivr.net/gh/asinerum/project/scr/_cash.js"></script>
   <script src="https://cdn.jsdelivr.net/gh/asinerum/project/scr/_dash.js"></script>
   <script src="https://cdn.jsdelivr.net/gh/asinerum/project/scr/_lite.js"></script>
   <script src="https://cdn.jsdelivr.net/gh/asinerum/project/scr/_qrcode.js"></script>
-  <script src="https://cdn.jsdelivr.net/gh/asinerum/project/scr/_axios.js"></script>
+  <script src="https://cdn.jsdelivr.net/gh/asinerum/project/scr/xuteng.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/synaptic@1.1.4/dist/synaptic.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/mathjs@6.6.4/dist/math.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@1.3.1/dist/tf.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@teachablemachine/image@0.8/dist/teachablemachine-image.min.js"></script>
   <script src="https://unpkg.com/keras-js"></script>
-  <script src="https://cdn.jsdelivr.net/gh/asinerum/project/scr/xuteng.js"></script>
   </head>
   <body>
   <div class="body" id="body">
